# pywire-shell

./: .gitignore  Cargo.toml  pyproject.toml  verify.html  verify.py
rust/pywire_servo/: Cargo.toml
rust/pywire_servo/src/: keyutils.rs  lib.rs
scripts/: check  install  setup-servo
src/pywire_shell/: __init__.py  _loader.py
tests/: test_loader.py
