[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "pywire-shell"
version = "0.1.0"
description = "Lightweight desktop apps with Python + HTML/CSS (Servo)"
requires-python = ">=3.11"
dependencies = [
    "pywire"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[tool.maturin]
manifest-path = "rust/pywire_servo/Cargo.toml"
python-source = "src"
# NOTE: User must ensure lib.rs has #[pyo3::pymodule] and name matches
module-name = "pywire_shell._pywire_servo"
