[package]
name = "pywire_servo"
version = "0.1.0"
edition = "2021"

[lib]
name = "pywire_servo"
crate-type = ["cdylib"]

[dependencies]
servo = { package = "libservo", git = "file:///Users/rholmdahl/projects/pywire-workspace/pywire-shell/servo-upstream", features = ["clipboard", "js_jit"] }
winit = "0.30"
url = "2.5"
raw-window-handle = "0.6"
keyboard-types = "0.8.3"
euclid = "0.22"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
glow = "0.16"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-app-kit = { version = "0.2.2", features = ["std", "NSWindow", "NSView", "NSColorSpace"] }
objc2-foundation = { version = "0.2.2", features = ["std", "NSObject"] }
